FIX gap not working mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -168,6 +168,7 @@ body {
       padding: 0;
       padding-bottom: 1rem;
       .generated {
+        margin-bottom: 1rem;
         .header-gen {
           .photo {
             img {
@@ -176,6 +177,7 @@ body {
             }
           }
           .text {
+            margin-right: 1rem;
             .head {
               display: flex;
               align-items: center;
